test/domains/compilerErrors/notsupportedOpBy-sparse.chpl

var dfltRectangularSparseSub: sparse subdomain(LocaleSpace);
writeln(dfltRectangularSparseSub by 1);
